initial rework, new home page

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,7 +26,7 @@
         <div class="sidenav">
             <nav>
                 <ul class="menu fa-ul">
-                    <li><span class="inner"><i class="fa fa-home fa-lg"></i><a href="{{ url_for('index') }}">Home</a></span></li>
+                    <li><span class="inner"><i class="fa fa-home fa-lg"></i><a href="{{ url_for('home') }}">Home</a></span></li>
                     <li><span class="inner"><i class="fa fa-exclamation-circle fa-lg"></i><a href="{{ url_for('tutorial') }}">Tutorial</a></span></li>
                     <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('information') }}">More Information</a></span></li>
                     <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('download') }}">Example Datasets</a></span></li>
