Routing fixed for DAFD 1.0, all stable

--- a/app/templates/forward_1.html
+++ b/app/templates/forward_1.html
@@ -37,7 +37,7 @@
             <br/>
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <input type="button" class="btn btn-success" onclick="window.location.href='{{ url_for('index') }}'" value="Back to Home Screen"/>
+                    <input type="button" class="btn btn-success" onclick="window.location.href='{{ url_for('home') }}'" value="Back to Home Screen"/>
                 </div>
             </div>
             <div class="spacer"></div>
