Added quality metrics to forward

--- a/app/templates/forward_2.html
+++ b/app/templates/forward_2.html
@@ -6,8 +6,6 @@
     <div class="row">
         <div class="col-md-12 col-sm-12">
             <h3>Performance Prediction of Droplet Generators</h3>
-            
-            <h4>Predicted Performance</h4>
             {% for key, value in perform.items() %}
             <div class="row">
                 <div class="col-md-4 col-sm-12 col-xs-12">{{ key }}</div>
@@ -37,7 +35,7 @@
             <br/>
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <input type="button" class="btn btn-success" onclick="window.location.href='{{ url_for('index') }}'" value="Back to Home Screen"/>
+                    <input type="button" class="btn btn-success" onclick="window.location.href='{{ url_for('home') }}'" value="Back to Home Screen"/>
                 </div>
             </div>
             <div class="spacer"></div>
@@ -199,4 +197,9 @@
     </div>
 </div>
 {% endif %}
+
+<!-- /metrics content -->
+    {% if metrics_results %}
+    {{ metrics_results}}
+    {% endif %}
 {% endblock %}
