--- a/app/templates/forward_2.html
+++ b/app/templates/forward_2.html
@@ -49,8 +49,7 @@
         <div class="col-md-12 twelve columns">
             <H1 class="title"> DAFD Design Report</H1>
             <p>Thank you for using DAFD, the first machine-learning design automation tool for droplet microfluidics.
-                Below is a summary of your design, along with helpful information in troubleshooting possible
-                fabrication or testing errors (tolerances).</p>
+                Below is a summary of your design.</p>
             <h3>Assembly Information</h3>
             <p><img class="img" src="{{ url_for('static', filename='img/drop_assembly.png') }}" width="100%"></p>
             <h1>Droplet Generator Overview</h1>
