integrated some of Ali's changes, need to fix download

--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -284,13 +284,13 @@
 							<div class="row slider-one-col">
 								<!--2nd column-->
 								<div class="col-md-1 text-center">
-									<input type="checkbox" id="regimeCheck" onclick="disableCombo(this.id, 'regimeCombo');">
+									<input type="checkbox" id="regimeCheck" onclick="disableCombo(this.id, 'regimeCombo');" checked>
 								</div>
 								<div class="col-md-4 text-left">
 									<p class="field-tip">Regime<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
-									<select class="cmbox" name="regime" id="regimeCombo" disabled>
+									<select class="cmbox" name="regime" id="regimeCombo">
 										<option value="1" selected>Dripping</option>
 										<option value="2">Jetting</option>
 									</select>
@@ -337,13 +337,13 @@
 							<div class="row slider-one-col">
 								<!--2nd column-->
 								<div class="col-md-1 text-center">
-									<input type="checkbox" id="sortByCheck" onclick="disableCombo(this.id, 'sortByCombo');">
+									<input type="checkbox" id="sortByCheck" onclick="disableCombo(this.id, 'sortByCombo');" checked>
 								</div>
 								<div class="col-md-4 text-left">
 									<p class="field-tip">Desired metric<!--<span class="tip-content">Channel depth divided by orifice width</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
-									<select class="cmbox" name="sort_by" id="sortByCombo" disabled>
+									<select class="cmbox" name="sort_by" id="sortByCombo">
 										<option value="1" selected>Flow Stability</option>
 										<option value="2">Overall versatility score</option>
                                         <option value="3">Size versatility score</option>
