--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -23,7 +23,7 @@
 			<div class="row md-spacer">
 				<div class="col-md-12">
 					<div class="banner">
-						<p>The SECOND microfluidic design automation software to deliver a user-specified performance using machine learning.</p>
+						<p>The first microfluidic design automation software to deliver a user-specified performance using machine learning.</p>
 					</div>
 				</div>
 			</div>
@@ -52,7 +52,7 @@
 			<a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/></a>
 		</div>
 		<div class="col-md-6 text-right">
-			<span class='copyright'>Copyright 2020, CIDAR Lab - All Rights Reserved.</span>
+			<span class='copyright'>Copyright 2022, CIDAR Lab - All Rights Reserved.</span>
 			<a href='https://www.youtube.com/user/cidarlab' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
 			<a href='https://twitter.com/cidar_lab?lang=en' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/twitter.png') }}"/></a>
 			<a href='https://github.com/CIDARLAB/DAFD' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/github.png') }}"/></a>
