changed David's headshot

--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Rizki.png') }}"></div>
-                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/David.png') }}"></div>
+                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/David.jpg') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Luis.png') }}"></div>
                     </div>
                     <div class="row vertical-spacer">
