--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -10,19 +10,19 @@
                 <div class="static-content text-center">
                     <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Ali2.png') }}"></div>
-                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Chris.png') }}"></div>
+                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/David.jpg') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Noushin.png') }}"></div>
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center">
                             <b>Ali Lashkaripour</b>
                             <br/>Lead Researcher
-                            <br/>lashkari@bu.edu
+                            <br/>alilp@stanford.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
-                            <b>Christopher Rodriguez</b>
-                            <br/>Co-researcher
-                            <br/>cwrod@mit.edu
+                            <b>David McIntyre</b>
+                            <br/>Lead Researcher
+                            <br/>dpmc@bu.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
                             <b>Noushin Mehdipour</b>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Rizki.png') }}"></div>
-                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/David.jpg') }}"></div>
+                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Chris.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Luis.png') }}"></div>
                     </div>
                     <div class="row vertical-spacer">
@@ -42,9 +42,9 @@
                             <br/>mardian@bu.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
-                            <b>David McIntyre</b>
+                            <b>Christopher Rodriguez</b>
                             <br/>Co-researcher
-                            <br/>dpmc@bu.edu
+                            <br/>cwrod@mit.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
                             <b>Luis Ortiz</b>
@@ -54,6 +54,7 @@
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Doug.png') }}"></div>
+                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/polly.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Joshua.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"></div>
                     </div>
@@ -64,10 +65,18 @@
                             <br/>dougd@bu.edu
                         </div>
                         <div class="col-md-4 col-sm-12 text-center">
+                            <b>Polly Fordyce</b>
+                            <br/>Co-PI
+                            <br/>pfordyce@stanford.edu
+                        </div>
+                        <div class="col-md-4 col-sm-12 text-center">
                             <b>Joshua Campbell</b>
                             <br/>Co-PI
                             <br/>camp@bu.edu
                         </div>
+
+
+
                         <div class="col-md-4 col-sm-12 text-center">
                         </div>
                     </div>
